priority_policy/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0,port_value: 9901 }
static_resources:
  listeners:
  - name: http_listener
    address:
      socket_address: { address: 0.0.0.0,port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: test_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: webcluster }
          http_filters:
          - name: envoy.router
  clusters:
  - name: webcluster
    connect_timeout: 0.25s
    http2_protocol_options: {}
    lb_policy: ROUND_ROBIN
    type: STRICT_DNS
    load_assignment:
      cluster_name: webcluster
      policy:
        overprovisioning_factor: 140
      endpoints:
      - locality:
          region: cn-north-1
        priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: colorful,port_value: 80}
      - locality:
          region: cn-north-2
        priority: 1
        lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: myservice,port_value: 80}
    health_checks:
    - timeout: 2s
      interval: 10s
      unhealthy_threshold: 2
      healthy_threshold: 2
      http_health_check:
        path: /healthz
        expected_status: 200
